<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="androidx.lifecycle.LiveData"/>
        <import type="moreakshay.com.mine.utils.network.Resource"/>
        <import type="moreakshay.com.mine.ui.domain.Movie"/>
        <import type="java.util.List"/>
        <variable
            name="upcoming"
            type="LiveData&lt;Resource&lt;List&lt;Movie>>>" />
        <variable
            name="nowplaying"
            type="LiveData&lt;Resource&lt;List&lt;Movie>>>" />
        <variable
            name="popular"
            type="LiveData&lt;Resource&lt;List&lt;Movie>>>" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".ui.home.activities.HomeActivity">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_36dp"
            android:text="@string/movies"
            android:textAppearance="@style/TextHeader"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:src="@drawable/ic_search"
            app:layout_constraintBottom_toBottomOf="@+id/tv_header"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_header" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraint"
            app:layout_constraintTop_toBottomOf="@+id/tv_header"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_20dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:listData="@{upcoming.data}"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/item_banner" />
<!--                app:layout_constraintTop_toBottomOf="@+id/tv_header"-->

                <TextView
                    android:id="@+id/tv_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:text="@string/now"
                    android:textAppearance="@style/TextSubHeader"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_banner" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_now"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_now"
                    app:listData="@{nowplaying.data}"
                    tools:listitem="@layout/item_show" />

                <TextView
                    android:id="@+id/tv_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_28dp"
                    android:text="@string/popular"
                    android:textAppearance="@style/TextSubHeader"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_now" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_popular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20dp"
                    android:layout_marginTop="@dimen/_20dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_popular"
                    app:listData="@{popular.data}"
                    tools:listitem="@layout/item_show"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>